# gesturelibrary

./: .gitignore  APIReference.md  README.md  pyproject.toml
gestures/: __init__.py  cli_test.py  coord_translating.py  coord_translator.py  gesture_detector.py  gestures.py  main.py  media_processing.py  utils.py  webcam.py  webcam_test.py
test/: cli_test.py  hand_visualization.py  webcam_test.py
