[tool.poetry]
name = "gestures"
version = "0.1.0"
description = "A game library designed to take webcam data (of a hand) and streamline it into a readable input format."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
